[bugfix-536] Fix dance-style filter

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -738,7 +738,7 @@
             "accuracy": "Präzision",
             "balanced": "Ausgeglichen",
             "challenge": "Herausforderung",
-            "dancestyle": "Tanz",
+            "dance-style": "Tanz",
             "fitness": "Fitness",
             "speed": "Geschwindigkeit",
             "tech": "Tech"
