--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -745,7 +745,7 @@
             "accuracy": "accuracy",
             "balanced": "balanced",
             "challenge": "challenge",
-            "dancestyle": "dance",
+            "dance-style": "dance",
             "fitness": "fitness",
             "speed": "speed",
             "tech": "tech"
