--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -738,7 +738,7 @@
             "accuracy": "precisión",
             "balanced": "equilibrado",
             "challenge": "desafío",
-            "dancestyle": "baile",
+            "dance-style": "baile",
             "fitness": "fitness",
             "speed": "speed",
             "tech": "tech"
