--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -738,7 +738,7 @@
             "accuracy": "précision",
             "balanced": "équilibrée",
             "challenge": "challenge",
-            "dancestyle": "dance",
+            "dance-style": "dance",
             "fitness": "fitness",
             "speed": "vitesse",
             "tech": "tech"
