--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -738,7 +738,7 @@
             "accuracy": "正確",
             "balanced": "バランス",
             "challenge": "挑戦",
-            "dancestyle": "ダンス",
+            "dance-style": "ダンス",
             "fitness": "フットネス",
             "speed": "スピード",
             "tech": "技術的"
