--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -737,7 +737,7 @@
             "accuracy": "точность",
             "balanced": "баланс",
             "challenge": "испытание",
-            "dancestyle": "танец",
+            "dance-style": "танец",
             "fitness": "фитнес",
             "speed": "скорость",
             "tech": "техника"
