--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -738,7 +738,7 @@
             "accuracy": "精确度",
             "balanced": "平衡",
             "challenge": "挑战",
-            "dancestyle": "舞蹈",
+            "dance-style": "舞蹈",
             "fitness": "健身",
             "speed": "速度",
             "tech": "技术"
