--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -738,7 +738,7 @@
             "accuracy": "精確度",
             "balanced": "平衡",
             "challenge": "挑戰",
-            "dancestyle": "舞蹈",
+            "dance-style": "舞蹈",
             "fitness": "健身",
             "speed": "速度",
             "tech": "技術"
