--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -73,7 +73,8 @@
                 "mods-not-available": "Für diese Version von Beat Saber sind noch keine Mods verfügbar",
                 "buttons": {
                     "more-infos": "Mehr Infos",
-                    "install-or-update": "Installieren oder aktualisieren"
+                    "install-or-update": "Installieren oder aktualisieren",
+                    "reinstall-all": "Alles neu installieren"
                 },
                 "mods-grid": {
                     "header-bar": {
