--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -73,7 +73,8 @@
                 "mods-not-available": "このバージョンで使用できるMODはまだありません。",
                 "buttons": {
                     "more-infos": "詳細情報",
-                    "install-or-update": "インストールとアップデート"
+                    "install-or-update": "インストールとアップデート",
+                    "reinstall-all": "すべて再インストール"
                 },
                 "mods-grid": {
                     "header-bar": {
