--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -73,7 +73,8 @@
                 "mods-not-available": "该版本 BeatSaber 暂无可用 Mod",
                 "buttons": {
                     "more-infos": "更多信息",
-                    "install-or-update": "安装或更新"
+                    "install-or-update": "安装或更新",
+                    "reinstall-all": "重新安装全部"
                 },
                 "mods-grid": {
                     "header-bar": {
