[feature-550] When its possible display the NPS ou NJS of the map instead of just the difficulty

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -730,6 +730,7 @@
         "map-filter-panel": {
             "duration": "Länge",
             "nps" : "Noten Pro Sekunde",
+            "njs": "Notensprunggeschwindigkeit",
             "tags": "Stichworte",
             "specificities": "Allgemein",
             "requirements": "Anforderungen",
