--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -86,6 +86,12 @@
                             "uninstall-all": "Alle deinstallieren"
                         }
                     }
+                },
+                "notifications": {
+                    "all-mods-already-installed": {
+                        "title": "Mods bereits installiert",
+                        "description": "Alle ausgewählten Mods sind bereits installiert"
+                    }
                 }
             },
             "dropdown": {
