--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -86,6 +86,12 @@
                             "uninstall-all": "Uninstall all"
                         }
                     }
+                },
+                "notifications": {
+                    "all-mods-already-installed": {
+                        "title": "Mods already installed",
+                        "description": "All selected mods are already installed"
+                    }
                 }
             },
             "dropdown": {
