--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -86,6 +86,12 @@
                             "uninstall-all": "Tout désinstaller"
                         }
                     }
+                },
+                "notifications": {
+                    "all-mods-already-installed": {
+                        "title": "Mods déjà installées",
+                        "description": "Tous les mods séléctionnées sont déjà installées"
+                    }
                 }
             },
             "dropdown": {
