--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -86,6 +86,12 @@
                             "uninstall-all": "Удалить всё"
                         }
                     }
+                },
+                "notifications": {
+                    "all-mods-already-installed": {
+                        "title": "Моды уже установлены",
+                        "description": "Все выбранные моды уже установлены"
+                    }
                 }
             },
             "dropdown": {
