--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -14,7 +14,8 @@
         "refuse": "Отказаться",
         "apply": "Применить",
         "copy": "Скопировать",
-        "copied": "Скопировано!"
+        "copied": "Скопировано!",
+        "confirm": "Confirm"
     },
     "nav-bar": {
         "add-version": "Добавить версию игры",
@@ -766,6 +767,11 @@
                 "info-3": "Обратите внимание, что не рекомендуется предоставлять права администратора Steam, так как это также влияет на установленные игры и моды, представляя угрозу безопасности."
             },
             "launch-as-admin": "Запустить от имени администратора"
+        },
+        "ask-install-path": {
+            "title": "Папка установок",
+            "choose-folder": "Изменить папку",
+            "default": "Default"
         }
     },
     "maps": {
