--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -14,7 +14,8 @@
         "refuse": "Refuse",
         "apply": "Apply",
         "copy": "Copy",
-        "copied": "Copied!"
+        "copied": "Copied!",
+        "confirm": "Confirm"
     },
     "nav-bar": {
         "add-version": "Add a version",
@@ -774,6 +775,11 @@
             },
             "launch-as-admin": "Launch as Administrator",
             "not-remind-me": "Do not remind me"
+        },
+        "ask-install-path": {
+            "title": "Installation folder",
+            "choose-folder": "Choose folder",
+            "default": "Default"
         }
     },
     "maps": {
