--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -139,7 +139,7 @@
             },
             "installation-folder": {
                 "title": "Installation folder",
-                "description": "Change the default folder for Beat Saber versions and other upcoming features.",
+                "description": "Change the folder that will contain all the content downloaded by BSManager.",
                 "choose-folder": "Choose folder"
             },
             "proton-path": {
@@ -778,8 +778,10 @@
         },
         "ask-install-path": {
             "title": "Installation folder",
+            "choose-folder-description": "Choose the folder that will contain all the content downloaded by BSManager.",
             "choose-folder": "Choose folder",
-            "default": "Default"
+            "default": "Default",
+            "default-tooltip": "Defaults to your home folder"
         }
     },
     "maps": {
