--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -139,7 +139,7 @@
             },
             "installation-folder": {
                 "title": "安装文件夹",
-                "description": "为 BeatSaber 不同版本及未来其他特性修改默认文件夹",
+                "description": "Change the folder that will contain all the content downloaded by BSManager.",
                 "choose-folder": "选择文件夹"
             },
             "additional-content": {
@@ -771,8 +771,10 @@
         },
         "ask-install-path": {
             "title": "安装文件夹",
+            "choose-folder-description": "Choose the folder that will contain all the content downloaded by BSManager.",
             "choose-folder": "选择文件夹",
-            "default": "Default"
+            "default": "Default",
+            "default-tooltip": "Defaults to your home folder"
         }
     },
     "maps": {
