--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -485,6 +485,15 @@
                     "title": "Бэкап создан",
                     "msg": "Общая папка 'UserData' может создавать ошибки. В случае проблем отвяжите папку, чтобы восстановить бэкап."
                 }
+            },
+            "linking-error": {
+                "title": "Ошибка при связывании папки",
+                "msg": {
+                    "EPERM": "BSManager не имеет необходимых прав для связывания папки.",
+                    "EACCES": "BSManager не имеет необходимых прав для связывания папки.",
+                    "ENOSPC": "Диск заполнен, освободите место и попробуйте снова.",
+                    "UNKNOWN_ERROR": "Произошла неизвестная ошибка при связывании папки."
+                }
             }
         },
         "create-launch-shortcut": {
