--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -481,6 +481,15 @@
                     "title": "バックアップを作成しました",
                     "msg": "'UserData'フォルダを共有するとエラーが発生する可能性があります。問題が発生した場合は、フォルダをリンク解除してバックアップを復元してください。"
                 }
+            },
+            "linking-error": {
+                "title": "フォルダのリンク中にエラーが発生しました",
+                "msg": {
+                    "EPERM": "BSManagerにはフォルダをリンクするための必要な権限がありません。",
+                    "EACCES": "BSManagerにはフォルダをリンクするための必要な権限がありません。",
+                    "ENOSPC": "ディスクがいっぱいです。空き容量を作ってもう一度試してください。",
+                    "UNKNOWN_ERROR": "フォルダをリンク中に不明なエラーが発生しました。"
+                }
             }
         },
         "create-launch-shortcut": {
